Fix img alignment
The image syntax, though correct, did not get implemented due to the images not having their own flexboxes. Now that they have their own boxes, the images should be centered.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-img {
+.img {
   width: 100px;
   height: 100px;
   display:flex;
